# wechat-article-downloader

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DMCA.md  LICENSE  PRIVACY.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  package.json  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/nodejs/: download.js
examples/python/: download.py
mcp/: skill.json
src/js/: article.js  cli.js  downloader.js  index.js  parser.js
src/python/: __init__.py  article.py  cli.py  downloader.py  exceptions.py  parser.py
tests/js/: test.js
tests/python/: test_downloader.py
